v4.9
-----
+ Non-sale games are now hidden from the "Specials" search
+ Added pricing history and formatting support for BRL (thanks drizzle!)
+ Added Polish translation by mrmahon
: The formatting of tags has changed from square to rounded

v4.8
-----
+ Added option to exclude Free To Play games from being highlighted
+ Added new tag: "friends recommend" which links to the recommendation page
+ Added "Endless Scrolling" mode for search results pages
+ Added Simplified Chinese translation by Bin Dong
+ Added option to replace account name in header with community name
: Fixed a bug where "Compare" links were only showing if your language was English
: Fixed a bug where friends with nicknames would incorrectly show 3 "Compare" links

v4.7.1
-----
: Fixed several issues with new price history code which should now work correctly
: Fixed an issue with new wording of "Four pack" being used and not showing a split price

v4.7
-----
+ Adds new sorting option to wishlist that lets you sort by discount percentage
+ Adds ability to hide Early Access games from the New Releases list on homepage
+ Adds new tag: "friends own" which tags each game with the number of your friends that own it
+ Adds "Games" link to header under your user name
+ Adds "Binder View" to badge progress page
+ Adds "(Compare)" link to activity page for achievements your friends unlock on games you own
+ Adds count of the number of times a game has been bundled in the price history section
: Significantly increased processing time on the community activity page and search results page

v4.6
-----
+ Enhanced Steam no longer executes on pages where you enter your account details
+ Badge progress page shows number of games eligible for booster packs
+ Added link to Enhanced Steam menu for the official Steam group
+ Added option to hide all active listings on market homepage by default
+ Added option to enable/disable automatic age verification