@@ -3,6 +3,7 @@ v4.9
 + Non-sale games are now hidden from the "Specials" search
 + Added pricing history and formatting support for BRL (thanks drizzle!)
 + Added Polish translation by mrmahon
++ Profile links now display on private profiles
 : The formatting of tags has changed from square to rounded
 
 v4.8
